--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head> 
 
 <body>
+    <img src="EMP3.png" height="300" width="1900"/>
     <h1> Welcome To 3MP Mods </h1>
-    
     <h2> Our Team </h2>
     <a href="http://steamcommunity.com/id/CoasterHD/"> CoasterHD's Profile </a> | <a href="http://steamcommunity.com/id/XeMuX/"> XeMuX's Profile </a>
     
