--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <img alt="" border="0" src="https://www.paypalobjects.com/en_AU/i/scr/pixel.gif" width="1" height="1">
 </form>
 
-   <h4> How do we do this? Well we login to your account and we add the money and levels (We can show proof through discord screenshare) </h4>
+   <h4> How do we do this? Well we login to your account and we add the money and levels </h4>
     
     <h1>Please support us using this app it makes it so that we don't have to run ads :D </h1>
    
