--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2> Staff Live List (updated every 1/2 hour) </h2>
      <a href="http://steamsignature.com"><img src="https://steamsignature.com/status/default/76561198310361196.png" alt=""/></a><a href="steam://friends/add/76561198310361196"><img src="http://steamsignature.com/AddFriend.png" alt="Add Friend"/></a> <a href="http://steamsignature.com"><img src="https://steamsignature.com/status/default/76561198145938085.png" alt=""/></a><a href="steam://friends/add/76561198145938085"><img src="http://steamsignature.com/AddFriend.png" alt="Add Friend"/></a>
     <h2> Our social medias </h2>
-   <h2> <a href="https://discord.gg/w3z4kQq" > Discord </a> </h2> 
+   <h2> <a href="https://discord.gg/hfjwEqa" > Discord </a> </h2> 
      
     <h2> Our services </h2>
     <h3> VIP to our discord (comes with many benefits) </h3>
@@ -25,8 +25,8 @@
 <h4> VIP comes with alot of benefits and its only $10  
 <p> + Comes witha full GTA account recovery (What ever level you want, However much money you want and full unlocks) </p>
 <p> + Get access to our invite only lobbys first </p>
-<p> + Recoverys from now are only $5 per 1 billion </p>
-<p> + Access to there own private channel </p>
+<p> + Recoverys from now are only $5 per 1 billion (after your recovery) </p>
+<p> + Access to your own private channel </p>
 <p> + Access to DJ role with music bot </p>
 <p> + Get access to our private cracked accounts discord channel (Free premium spotify, netflix and so on) </p> </h4>
 <h4> Once you have purchased please join our discord and show us your orderid number given to you by paypal
