--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h4> VIP comes with alot of benefits and its only $10  
 <p> + Comes witha full GTA account recovery (What ever level you want, However much money you want and full unlocks) </p>
 <p> + Get access to our invite only lobbys first </p>
-<p> + Recoverys from now are only $5 per 1 billion (after your recovery) </p>
+<p> + Recoverys from now are only $1 per 1 billion (after your first recovery) </p>
 <p> + Access to your own private channel </p>
 <p> + Access to DJ role with music bot </p>
 <p> + Get access to our private cracked accounts discord channel (Free premium spotify, netflix and so on) </p> </h4>
