--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p> + Get access to our invite only lobbys first </p>
 <p> + Recoverys from now are only $1 per 1 billion (after your first recovery) </p>
 <p> + Access to your own private channel </p>
-<p> + Access to DJ role with music bot </p>
+<p> + Access to unlimited song length & unlimited playlist length with the music bot </p>
 <p> + Get access to our private cracked accounts discord channel (Free premium spotify, netflix and so on) </p> </h4>
 <h4> Once you have purchased please join our discord and show us your orderid number given to you by paypal
  
